# create_libs

./: CMakeLists.txt
HeaderLib/include/: Laughter.ipp
ReleaseVersion/: CMakeLists.txt  Laughter.cpp
StaticLib/include/: Laughter.hpp
StaticLib/lib/: StaticLib.lib
